Fix nonjs button styling

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -59,7 +59,8 @@
         </fieldset>
         <noscript>
             <button type="submit"
-                    class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
+                    class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
+                    <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
             </button>
         </noscript>
     </form>
@@ -122,12 +123,13 @@
                         </div>
                     {{ end }}
                 </div>
+                <noscript>
+                    <button type="submit"
+                            class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
+                            <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                    </button>
+                </noscript>
             </details>
-        <noscript>
-            <button type="submit"
-                    class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
-            </button>
-        </noscript>
     </form> 
 
     {{ if $population_types }}
@@ -171,7 +173,8 @@
             </details>
         <noscript>
             <button type="submit"
-                    class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
+                    class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
+                    <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
             </button>
         </noscript>
     </form>
@@ -215,12 +218,13 @@
                     </div>         
                     {{ end }}         
                 </div>
+                <noscript>
+                    <button type="submit"
+                            class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
+                            <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                    </button>
+                </noscript>
             </details>
-        <noscript>
-            <button type="submit"
-                    class="btn btn--primary btn--thick margin-top-sm--2 margin-top-md--2 js-submit-button">Filter
-            </button>
-        </noscript>
     </form>
     {{ end }}
 
