--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -19,6 +19,8 @@
                 </option>
             {{ end }}
         </select>
-        <button type="submit" class="ons-btn btn btn--primary btn--thin btn--small js--hide font-size--16">Sort</button>
+        <button type="submit" class="ons-btn ons-btn--secondary ons-btn--small js--hide font-size--16">
+            <span class="ons-btn__inner"><span class="ons-btn__text">Sort</span></span>
+        </button>
     </div>
 </form>
