Add zero results messaging

--- a/assets/templates/partials/results.tmpl
+++ b/assets/templates/partials/results.tmpl
@@ -12,6 +12,11 @@
         </p>
         </div>
     </div>
+    <div id="results-zero" class="hide">
+        <h3>{{ localise "NoResultsHeader" $lang 1 }}</h3>
+        <p>{{ localise "NoResultsSelectAnother" $lang 1 }} {{ localise "Or" $lang 1 }} <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search">{{ localise "ClearAllFilters" $lang 1 }}</a>.</p>
+        <p>{{ localise "NoResultsBody" $lang 1 | safeHTML}}</p>
+    </div>
     <ul class="flush--padding">
     {{ range $i, $item := $response.Items }}
         {{ $currentPosition := add $i 1 }}
