--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -42,6 +42,7 @@
             <h3 class="font-size--18">
               {{ localise "FilterResults" $lang 4 }}
             </h3>
+            <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
           </div>
           <div class="search__filter__content">
             {{ template "partials/filter" . }}
