--- a/assets/templates/partials/summary.tmpl
+++ b/assets/templates/partials/summary.tmpl
@@ -1,18 +1,6 @@
 {{ $lang := .Language }}
 <div aria-live="polite">
-    <span class="search__summary__count">{{ .Data.Response.Count}}
-        {{ if and (.Data.Filter) (not .Data.Response.Suggestions) }}
-            {{ $length := len .Data.Sort.LocaliseFilterKeys }}
-            {{ range $i, $LocaliseFilterKey := .Data.Sort.LocaliseFilterKeys }}
-                <span class="lowercase">
-                    {{ localise $LocaliseFilterKey $lang 4 }}{{ if lt $i (subtract $length 2) }}, {{end}}
-                    {{ if eq $i (subtract $length 2) }} {{ localise "And" $lang 1 }} {{end}}
-                </span>
-            {{ end }}
-        {{else}} {{ localise "Results" $lang 1 }} {{end}} 
-        {{ if .Data.Query}} {{ localise "For" $lang 1 }} {{ end }}
-    </span>
-    <span class="search__summary__query">{{ .Data.Query}}</span>
+    <h1 class="ons-u-fs-xxxl">{{ localise .Title.LocaliseKeyName $lang 1}}{{ if .Data.Query }} {{ localise "For" $lang 1 }} {{ .Data.Query}}{{ end }}</h1>
     {{ $len := len .Data.Response.AdditionalSuggestions}}
     {{ $numberResults := len .Data.Response.Items}}
     {{ if .Data.Response.Suggestions}}
@@ -31,6 +19,8 @@
                 {{ end }}
             {{ end }}
         </span>
+    {{ else if (le $numberResults 0) }}
+        <span class="ons-u-fs-l search__summary__count font-size--30">0 {{ localise "Results" $lang 4}}</span>
     {{ end }}
 </div>
 
